--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
     package="com.konai.sendbirdapisampleapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"
+        tools:ignore="QueryAllPackagesPermission" />
 
     <application
         android:allowBackup="true"
@@ -28,9 +30,5 @@
         <activity
             android:name=".activity.MainActivity"
             android:exported="false"/>
-        <activity
-            android:name=".activity.UiKitActivity"
-            android:exported="false" />
     </application>
-
 </manifest>
