--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         tools:targetApi="31">
         <activity
             android:name=".activity.ChannelActivity"
+            android:windowSoftInputMode="adjustPan"
             android:exported="false" />
         <activity
             android:name=".activity.LoginActivity"
@@ -32,7 +33,7 @@
         </activity>
         <activity
             android:name=".activity.MainActivity"
+            android:windowSoftInputMode="adjustNothing"
             android:exported="false" />
     </application>
-
 </manifest>
