--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,8 @@ dependencies {
     //firebase
     implementation platform('com.google.firebase:firebase-bom:30.3.1')
     implementation 'com.google.firebase:firebase-firestore-ktx:24.1.1'
+
+    //EncryptedSharedPreferences
+    implementation 'androidx.security:security-crypto-ktx:1.1.0-alpha03'
+
 }
